internal/kgateway/translator/gateway/testutils/inputs/validation/gateway-reserved-port.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: test
spec:
  gatewayClassName: kgateway
  listeners:
  - protocol: HTTP
    port: 9091 # reserved port should be rejected
    name: http
    allowedRoutes:
      namespaces:
        from: All
