internal/kgateway/translator/gateway/testutils/inputs/validation/xlistenerset-reserved-port.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test
spec:
  gatewayClassName: kgateway
  allowedListeners:
    namespaces:
      from: All
